Blockquote: Fix textarea and select inputs being the wrong color in dark mode

--- a/apps/blockquote/assets/sass/_forms.scss
+++ b/apps/blockquote/assets/sass/_forms.scss
@@ -181,7 +181,11 @@ label {
         color: #cacaca;
     }
 
-    .required label, label.required {
+    .required label, label.required, textarea {
         color: #fff;
+    }
+
+    select.form-control, textarea {
+        background-color: #000;
     }
 }
